--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dimforge/rapier3d-compat": "^0.17.0",
     "@types/three": "^0.176.0",
     "next": "15.3.2",
     "react": "^19.0.0",
